# CONTAM-Next

./: .gitignore  CLAUDE.md  README.md  build-installer.ps1  build-mac.sh
.github/workflows/: ci.yml
.omc/: prd.json  progress.txt
app/: package-lock.json  package.json  test_runtime.py  vite.config.ts
app/src/: App.css  App.tsx  index.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: lib.rs
app/src/canvas/: Canvas2D.tsx  IsometricCanvas.tsx  interaction.ts  renderer.ts
app/src/canvas/components/: BackgroundImage.tsx  ContextMenu.tsx  FloatingStatusBox.tsx  FloorSwitcher.tsx  PlacementIcon.tsx  ResultsOverlay.tsx  TimeStepper.tsx  ToolModeIndicator.tsx  WallMesh.tsx  WallPreviewLine.tsx  ZoneFloor.tsx  ZoomControls.tsx
app/src/components/AHSPanel/: AHSPanel.tsx
app/src/components/ContaminantPanel/: ContaminantPanel.tsx
app/src/components/ModelSummary/: ModelSummary.tsx
app/src/components/OccupantPanel/: OccupantPanel.tsx
app/src/components/PropertyPanel/: PropertyPanel.tsx  ZoneProperties.tsx
app/src/components/ResultsView/: ResultsView.tsx
app/src/components/ScheduleEditor/: ScheduleEditor.tsx  WeekScheduleEditor.tsx
app/src/components/SketchPad/: SketchPad.tsx
app/src/components/StatusBar/: StatusBar.tsx
app/src/control/: ControlFlowCanvas.tsx
app/src/hooks/: use-toast.ts  useMergedRooms.ts
app/src/model/: dataBridge.ts  geometry.ts
app/src/store/: useAppStore.ts  useCanvasStore.ts
app/src/test/: interaction.test.ts  useAppStore.test.ts  useCanvasStore.test.ts
app/src/tools/: SelectTool.ts  StateNode.ts  WallTool.ts
app/src/types/: index.ts
app/src/utils/: fileOps.ts
docs/: algorithm-formulas.md  bug-tracker.md  dev-status-audit.md  user-manual.md  validation-report.md
engine/: CMakeLists.txt  Doxyfile
engine/python/: example_simulation.py  hdf5_export.py  pycontam.cpp  test_pycontam.py
engine/src/: main.cpp
engine/src/control/: Controller.h
engine/src/core/: AdaptiveIntegrator.cpp  AdaptiveIntegrator.h  ContaminantSolver.cpp  Link.cpp  Link.h  Network.cpp  Network.h  Node.cpp  Node.h  Occupant.h  Solver.cpp  Solver.h  Species.h  TransientSimulation.cpp
engine/src/elements/: Damper.cpp  Damper.h  Fan.cpp  Fan.h  Filter.cpp  Filter.h  FlowElement.h  PowerLawOrifice.cpp  PowerLawOrifice.h  TwoWayFlow.cpp  TwoWayFlow.h
engine/src/io/: JsonReader.cpp  JsonReader.h  JsonWriter.cpp  JsonWriter.h
engine/src/utils/: Constants.cpp  Constants.h
engine/test/: test_control.cpp  test_elements.cpp  test_json.cpp  test_network.cpp  test_powerlaw.cpp  test_solver.cpp  test_validation.cpp
schemas/: topology.schema.json
validation/case01_3room/: input.json  output.json
validation/case02_co2_source/: input.json  output.json
validation/case04_multizone/: input.json  output.json
(+22 files in other folders)
